# The-Document-Intelligence-Refinery

./: .gitignore  CONTEXT.MD  DOMAIN_NOTES.md  Dockerfile  FINAL_REPORT.md  README.md  TRP1 Challenge Week 3_ The Document Intelligence Refinery.docx.md  failures_utf8.txt  generate_log.txt  interim_report.html  main.py  pyproject.toml  pytest.ini  rubric_results.txt  rubric_test_output.txt
.refinery/: extraction_ledger.json
.refinery/pageindex/: 2013-E.C-Assigned-regular-budget-and-expense.json  2013-E.C-Audit-finding-information.json  2013-E.C-Procurement-information.json  2018_Audited_Financial_Statement_Report.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.json  2021_Audited_Financial_Statement_Report.json  2022_Audited_Financial_Statement_Report.json  Annual_Report_JUNE-2023.json  Audit Report - 2023.json  CBE ANNUAL REPORT 2023-24.json  CBE Annual Report 2010-11.json  CBE Annual Report 2011-12.json  Consumer Price Index August 2025.json  Consumer Price Index July 2025.json  Security_Vulnerability_Disclosure_Standard_Procedure_1.json  fta_performance_survey_final_report_2022.json  tax_expenditure_ethiopia_2021_22.json
.refinery/profiles/: 2013-E.C-Assigned-regular-budget-and-expense.json  2013-E.C-Audit-finding-information.json  (+15 more)
scripts/: build_interim_report.py  generate_final_artifacts.py  generate_interim_artifacts.py  rubric_compliance_test.py
src/: __init__.py
tests/: test_fast_text_fixed.py  test_layout_aware_confidence.py  test_router_escalation.py  test_schema_contracts.py  test_triage.py  test_vision_ollama.py
(+13 files in other folders)
